# mtg-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.app  Dockerfile.huey  README.md  api.dockerfile  app.dockerfile  docker-compose.prod.yml  docker-compose.vps-dev.yml  docker-compose.yml  huey.dockerfile  justfile  mcp.dockerfile  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  release.yml  ruff.yml
api/: main.py
api/depedencies/: embedding.py  langchain.py
api/helpers/: cards_mongo.py  database.py
api/router/: base.py  cards.py  dnd_rules.py  mtg_rules.py  ocr.py  sets.py
app/: app.py
app/dialog/: event.py
app/pages/: card_search.py  deck_list.py  dnd_rules.py  file_ocr.py  mtg_db.py  mtg_rules.py  sul.py
app/utils/: api.py  parse_cards.py
common/: constants.py  scyfall_models.py
common/events/: __init__.py  fetcher.py  formatter.py  models.py
common/infomaniak/: ik_embeddings.py  ik_llm.py
mcp_server/: __init__.py  client.py  server.py
mcp_server/resources/: __init__.py  cards.py
mcp_server/tools/: __init__.py
notebooks/: build_card_db.ipynb  build_card_db_ijson.ipynb  extract_whisper.ipynb  map_cards.ipynb  olmocr_test.ipynb  push_data_dnd.ipynb  push_data_mtg.ipynb  redis_db.ipynb  timescale_db.ipynb
scripts/: mtg_events.py
tasks/: fetch_dataset.py  ifetch_dataset.py  indexes.py  obj_utils.py  tasks.py
terraform/: main.tf  variables.tf
tests/: conftest.py  test_conftest.py  test_pytest_config.py
tests/api/helpers/: test_database.py
tests/api/router/: test_base_integration.py  test_card_search.py  test_cards_basic_integration.py  test_cards_resources.py  test_cards_search_integration.py  test_sets_integration.py
tests/app/: test_api_client.py
tests/common/events/: test_fetcher.py  test_formatter.py  test_models.py
tests/fixtures/: sample_cards.py  test_sample_cards.py
tests/mcp_server/: test_client.py  test_server.py
tests/mcp_server/resources/: test_cards.py
tests/mocks/: mongodb.py  test_mongodb.py
tests/scripts/: test_mtg_events_cli.py
web-app/: Dockerfile  Dockerfile.dev  biome.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
web-app/app/: globals.css  layout.tsx  page.tsx
web-app/components/: card-details-dialog.tsx  card-grid.tsx  card-search.test.tsx  card-search.tsx
web-app/e2e/: README.md  api.spec.ts  card-search.spec.ts  homepage.spec.ts
web-app/lib/: api.test.ts  api.ts  utils.test.ts
web-app/test/: test-utils.tsx
