[project]
name = "mtg-api"
description = "MTG APIs from Nicolas Casademont"
authors = [
    {name = "Pradyun Gedam", email = "pradyun@example.com"},
]
license = "GNU GPL v3"
readme = "README.md"
dynamic = ["version"]
requires-python = "<4.0,>=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "dateparser (>=1.2.0,<2.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
]

[tool.poetry]
version = "0.1.0"
package-mode = false


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.0.1"
isort = "^5.13.2"


[tool.poetry.group.app.dependencies]
streamlit = "^1.41.1"
streamlit-calendar = "^1.2.1"
streamlit-shadcn-ui = "^0.1.18"



[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["I"]
