[project]
name = "mtg-api"
description = "MTG APIs from Nicolas Casademont"
authors = [
    {name = "Pradyun Gedam", email = "pradyun@example.com"},
]
license = "GNU GPL v3"
readme = "README.md"
dynamic = ["version"]
requires-python = "<3.13,>=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "dateparser (>=1.2.0,<2.0.0)",
    "pymongo (>=4.10.1,<5.0.0)",
    "meilisearch (>=0.33.1,<0.34.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.5,<0.4.0)",
    "langchain-text-splitters (>=0.3.6,<0.4.0)",
    "langchain-community (>=0.3.17,<0.4.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "huey (>=2.5.2,<3.0.0)",
    "ijson (>=3.3.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "olmocr (>=0.1.58,<0.2.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "accelerate (>=1.5.2,<2.0.0)",
    "partial-json-parser (>=0.2.1.1.post5,<0.3.0.0)",
    "pymupdf (>=1.25.4,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
]

[tool.poetry]
version = "0.1.0"
package-mode = false


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.0.1"
isort = "^5.13.2"


[tool.poetry.group.app.dependencies]
streamlit = "^1.41.1"
streamlit-calendar = "^1.2.1"
streamlit-shadcn-ui = "^0.1.18"



[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E402"]
