[project]
name = "mtg-api"
version = "0.1.0"
description = "MTG APIs from Nicolas Casademont"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6,<0.116.0",
    "dateparser>=1.2.0,<2.0.0",
    "pymongo>=4.10.1,<5.0.0",
    "meilisearch>=0.33.1,<0.34.0",
    "langchain>=0.3.18,<0.4.0",
    "langchain-openai>=0.3.5,<0.4.0",
    "langchain-text-splitters>=0.3.6,<0.4.0",
    "langchain-community>=0.3.17,<0.4.0",
    "tqdm>=4.67.1,<5.0.0",
    "unidecode>=1.3.8,<2.0.0",
    "huey>=2.5.2,<3.0.0",
    "ijson>=3.3.0,<4.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "redis[hiredis]>=5.2.1,<6.0.0",
    "partial-json-parser>=0.2.1.1.post5,<0.3.0.0",
    "pymupdf>=1.25.4,<2.0.0",
    "pydub>=0.25.1,<0.26.0",
    "httpx>=0.28.0,<0.29.0",
    "typer>=0.15.0,<0.16.0",
    "rich>=13.9.0,<14.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
]
dev = [
    "ruff>=0.9.2",
    "pre-commit>=4.0.1",
    "isort>=5.13.2",
]
app = [
    "streamlit>=1.41.1",
    "streamlit-calendar>=1.2.1",
    "streamlit-shadcn-ui>=0.1.18",
]
training = [
    "einops>=0.8.1",
    "ipykernel>=6.30.1",
    "kornia>=0.8.1",
    "opencv-python>=4.12.0.88",
    "sam2>=1.1.0",
    "scipy>=1.16.2",
    "timm>=1.0.20",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "ultralytics>=8.3.203",
]

[project.license]
text = "GNU GPL v3"

# Modern dependency groups (replaces optional-dependencies.dev)
[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pre-commit>=4.0.1",
    "isort>=5.13.2",
]


# uv-specific configuration
[tool.uv]
# Explicitly mark as application (not a package) to suppress entry point warnings
package = false

# pip configuration
[tool.uv.pip]
# Use PyPI as primary index
index-url = "https://pypi.org/simple"
